# bs_detector

./: README.md  pyproject.toml
src/bs_detector/: crew.py  main.py
src/bs_detector/config/: agents.yaml  tasks.yaml
